--- a/app/views/deals/_body_most_reviewed_pc.html.erb
+++ b/app/views/deals/_body_most_reviewed_pc.html.erb
@@ -93,12 +93,12 @@
   <a target="_blank" href="https://amzn.to/2NqbNYY" class="overlay-container" data-overlay-text="Irons & Steamers"><img src="https://images.unsplash.com/photo-1489274495757-95c7c837b101?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Irons & Steamers" class="overlay-img" /><p>Irons & Steamers</p></a>
 </div>
 
-<div class="filter-node most_box" data-filter='["outdoor","Travel Steamers"]'>
-  <a target="_blank" href="https://amzn.to/2KR1hIy" class="overlay-container" data-overlay-text="Travel Steamers"><img src="https://images-na.ssl-images-amazon.com/images/I/91WaMD3kKYL._SX522_.jpg" alt="Travel Steamers" class="overlay-img" /><p>Travel Steamers</p></a>
+<div class="filter-node most_box" data-filter='["home","bath"]'>
+<a target="_blank" href="https://amzn.to/2HtGlFj" class="overlay-container" data-overlay-text="bath"><img src="https://images.unsplash.com/photo-1556228994-efb7c88fa0f9?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="bath" class="overlay-img" /><p>bath</p></a> 
 </div>
 
-<div class="filter-node most_box" data-filter='["outdoor","Travel Mugs"]'>
-  <a target="_blank" href="https://amzn.to/2Hkw0vs" class="overlay-container" data-overlay-text="Travel Mugs"><img src="https://images.unsplash.com/photo-1467949576168-6ce8e2df4e13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Travel Mugs" class="overlay-img" /><p>Travel Mugs</p></a>
+<div class="filter-node most_box" data-filter='["home","Cookware Set"]'>
+<a target="_blank" href="https://amzn.to/2ZApPK0" class="overlay-container" data-overlay-text="Cookware Set"><img src="https://images.unsplash.com/photo-1556910602-38f53e68e15d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60"https://images.unsplash.com/photo-1556910602-38f53e68e15d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60 alt="Cookware Set" class="overlay-img" /><p>Cookware Set</p></a> 
 </div>
 
 <div class="filter-node most_box" data-filter='["outdoor","Thermoses"]'>
@@ -127,6 +127,26 @@
 </div>
 <!-- End -->
 
+<div class="filter-node most_box" data-filter='["outdoor","backpack"]'>
+<a target="_blank" href="https://amzn.to/2Zv35uT" class="overlay-container" data-overlay-text="backpack"><img src="https://images.unsplash.com/photo-1557669246-38f5ebeb001c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="backpack" class="overlay-img" /><p>backpack</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["outdoor","Travel Steamers"]'>
+  <a target="_blank" href="https://amzn.to/2KR1hIy" class="overlay-container" data-overlay-text="Travel Steamers"><img src="https://images-na.ssl-images-amazon.com/images/I/91WaMD3kKYL._SX522_.jpg" alt="Travel Steamers" class="overlay-img" /><p>Travel Steamers</p></a>
+</div>
+
+<div class="filter-node most_box" data-filter='["outdoor","Travel Mugs"]'>
+  <a target="_blank" href="https://amzn.to/2Hkw0vs" class="overlay-container" data-overlay-text="Travel Mugs"><img src="https://images.unsplash.com/photo-1467949576168-6ce8e2df4e13?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Travel Mugs" class="overlay-img" /><p>Travel Mugs</p></a>
+</div>
+
+<div class="filter-node most_box" data-filter='["Categoryes","Luggage"]'>
+<a target="_blank" href="https://amzn.to/2Zu4Qse" class="overlay-container" data-overlay-text="Luggage"><img src="https://images.unsplash.com/photo-1509694276680-cfc1a363bc5d?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Luggage" class="overlay-img" /><p>Luggage</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["Categoryes","Travel Pillows"]'>
+<a target="_blank" href="https://amzn.to/32azjNo" class="overlay-container" data-overlay-text="Travel Pillows"><img src="https://images-na.ssl-images-amazon.com/images/I/61vtd5E4cvL._SX679_.jpg" alt="Travel Pillows" class="overlay-img" /><p>Travel Pillows</p></a> 
+</div>
+
 <!-- Main Categories Four -->
 <div class="filter-node most_box most_main" data-filter='["Categoryes","Office Products"]'>
   <a target="_blank" href="https://amzn.to/2Htu5Vf" class="overlay-container" data-overlay-text="Office Products"><img src="https://images.unsplash.com/photo-1456735190827-d1262f71b8a3?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Office Products" class="overlay-img" /><p>Office Products</p></a> 
@@ -140,6 +160,26 @@
   <a target="_blank" href="https://amzn.to/2NzhkMG" class="overlay-container" data-overlay-text="Book"><img src="https://images.unsplash.com/photo-1481627834876-b7833e8f5570?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Book" class="overlay-img" /><p>Book</p></a> 
 </div>
 <!-- End -->
+
+<div class="filter-node most_box" data-filter='["tech","Kindle Readers"]'>
+<a target="_blank" href="https://amzn.to/2U7zdUc" class="overlay-container" data-overlay-text="Kindle Readers"><img src="https://images.unsplash.com/photo-1555631545-9dc21031669b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Kindle Readers" class="overlay-img" /><p>Kindle Readers</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["others","Core Office Products"]'>
+<a target="_blank" href="https://amzn.to/328WeJe" class="overlay-container" data-overlay-text="Core Office Products"><img src="https://images.unsplash.com/photo-1454587399083-b11b22f48fb6?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Core Office Products" class="overlay-img" /><p>Core Office Products</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["tech","Printers"]'>
+<a target="_blank" href="https://amzn.to/324iCU3" class="overlay-container" data-overlay-text="Printers"><img src="https://images.unsplash.com/photo-1561990975-6cfff5661206?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Printers" class="overlay-img" /><p>Printers</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
+<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="https://images.unsplash.com/photo-1555631545-9dc21031669b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Title" class="overlay-img" /><p>Title</p></a> 
+</div>
+
+<div class="filter-node most_box" data-filter='["Categoryes","Title"]'>
+<a target="_blank" href="products_Link" class="overlay-container" data-overlay-text="Title"><img src="https://images.unsplash.com/photo-1555631545-9dc21031669b?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=500&q=60" alt="Title" class="overlay-img" /><p>Title</p></a> 
+</div>
 
 <!-- Main Categories Five -->
 <div class="filter-node most_box most_main" data-filter='["Categoryes","Beauty"]'>
