--- a/app/views/deals/_navbar_most_index.html.erb
+++ b/app/views/deals/_navbar_most_index.html.erb
@@ -1,14 +1,13 @@
 <div class="featured editors">
 
-  <!-- <button class="gnb_open"><img src="<%=asset_path 'open_black.png' %>" alt="모바일 메뉴 열기" /></button> -->
   <div class="sm_pc most_pc">
    <div class="filter-search guide_controll amzpromo most_rev">
       <button class="filter-button btn btn-md btn-primary rev_index" data-filter="*">All</button>
       <button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button>
       <button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button>
       <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Outdoor & Sports</button>
-      <!-- <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Beauty & Fashion</button> -->
-      <button class="filter-button btn btn-md rev_index" data-filter="others">Others</button>
+      <button class="filter-button btn btn-md rev_index" data-filter="beauty">Beauty & Fashion</button>
+      <button class="filter-button btn btn-md rev_index others" data-filter="others">Others</button>
       <!-- <button class="filter-button btn btn-md rev_index last_menu" data-filter="outdoor">etc...</button> -->
 <!--  <button class="filter-button btn btn-md rev_index" data-filter="5k">5,000 +</button>
       <button class="filter-button btn btn-md rev_index" data-filter="1k">1,000 +</button> -->
@@ -23,38 +22,6 @@
       <input type="text" class="form-control" placeholder="Search here...">
     </div>
   </div>
-  
-<!--   <div class="editor_mobile">
-    <div class="filter-search guide_controll">
-      <button class="filter-button btn btn-md btn-primary rev_index" data-filter="*">All</button>
-      <button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button>
-      <button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button>
-      <button class="filter-button btn btn-md rev_index" data-filter="outdoor">Outdoor & Sports</button>
-      
-      <ul class="dropmenu filter-button btn more_btn">
-        <li class="dir"><a href="#">More</a>
-          <ul>
-            <li><button class="filter-button btn btn-md" data-filter="10k">10,000 +</button></li>
-            <li><button class="filter-button btn btn-md" data-filter="5k">5,000 +</button></li>
-            <li><button class="filter-button btn btn-md" data-filter="1k">1,000</button></li>
-          </ul>
-        </li>
-      </ul>
-      <input type="text" class="form-control" placeholder="Search here...">
-    </div>
-  </div> -->
-
-  <!-- <div class="sm_mobile">
-    <div class="filter-search guide_controll amzpromo">
-      <p>Categories</p>
-        <button class="filter-button btn btn-md btn-primary" data-filter="*">All</button>
-        <button class="filter-button btn btn-md white-text" data-filter="electronic">Electronic</button>
-        <button class="filter-button btn btn-md" data-filter="kitchen">Kitchen</button>
-        <button class="filter-button btn btn-md" data-filter="home">Home</button>
-        <button class="filter-button btn btn-md" data-filter="outdoor">Outdoor</button>
-      </div>
-    <button class="gnb_close"><img src="<%=asset_path 'close_white.png' %>" alt="모바일 메뉴 닫기" />
-  </div> -->
 
 </div><!--./featured-->
-<div class="gnb_kbg"></div>
+
