--- a/app/views/deals/most_reviewed.html.erb
+++ b/app/views/deals/most_reviewed.html.erb
@@ -5,11 +5,11 @@
   
   <div class="promotions editors_pick common_layout most_wrapper clearfix">
     <%= render 'deals/navbar_most_index' %>
-    <div class="nav_most_m"><%= render 'deals/navbar_most_index2' %></div>
+    <div class="nav_most_m"><%= render 'deals/navbar_most_index_m' %></div>
     <div class="filter-group guide_wrap ">
       <div class="mt_info">
         <h2>Most-Reviewed Products On Amazon</h2> 
-        <p>Amazon is one of the biggest online market places in the world. And thanks to reviews and user feedback, it's also one of the most helpful since you can see what other people have purchased and loved on the site. So we put together a list of the most popular products. It's the easiest way to find the most reviewed products.</p>
+        <p>When it comes to deciding whether or not to buy a product, reviews and user feedback are one of the most helpful. So we’ve done the work for you. We put together a list of the most-reviewed products. Let us be your Amazon guide and walk you through the highest-reviewed products on Amazon.</p>
       </div>
       
       <%= render 'deals/body_most_reviewed_pc' %>
