--- a/app/views/shared/_footer2.html.erb
+++ b/app/views/shared/_footer2.html.erb
@@ -19,6 +19,7 @@
           <li><a href="/recommends">#Featured</a></li>
           <li><a href="/deals/bestdeals">#Daily Deals</a></li>
           <li><a href="/deals/promo_codes">#Promo Codes</a></li>
+          <li><a href="/deals/most_reviewed">#Most-Reviewed</a></li>
           <li><a href="/deals/promotions">#Promotion</a></li>
           <li><a href="/deals/quick_search">#Quick Search</a></li>
           <li><a href="/messages">#About</a></li>
