--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -80,7 +80,7 @@
     <div class="code_high">
       <address><span class="dis_price">$13.01</span><span class="ori_price">$28.90</span></address>
       <textarea readonly="readonly" class="code_area">559IMG8Y</textarea><button class="copycode">Copy</button>
-      <p class="mobile_code"><span>Take <strong>55% off at $28.90</strong> with promo code: <strong class="m_codes">559IMG8Y</strong></span></p><span class="ex_date ex_date_new">Expiration Date : End_date</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+      <p class="mobile_code"><span>Take <strong>55% off at $28.90</strong> with promo code: <strong class="m_codes">559IMG8Y</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 02, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
     </div>
   </div> 
   <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MJBmEG">Use Code at Amazon</a></div>
