--- a/app/views/deals/_body_promocode.html.erb
+++ b/app/views/deals/_body_promocode.html.erb
@@ -49,6 +49,190 @@
 </div>
  -->
 
+<div class="card clearfix" data-score="50" data-price="22.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NPoKf9"><img src="https://m.media-amazon.com/images/I/61OG4S3oJLL._SR400,400_.jpg" alt="Wireless Earphones Bluetooth Headphones" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NPoKf9">Wireless Earphones Bluetooth Headphones 100H Play time Deep Bass Stereo Sound Wireless Headphones Built-in Mic IPX8 Waterproof Bluetooth...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$22.49</span><span class="ori_price">$44.98</span></address>
+      <textarea readonly="readonly" class="code_area">50PJNDHV</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $44.98</strong> with promo code: <strong class="m_codes">50PJNDHV</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NPoKf9">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="60" data-price="15.60">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZvotjD"><img src="https://m.media-amazon.com/images/I/61Cl1+nMF7L._SR400,400_.jpg" alt="HKR Womens Slip On Fashion Sneakers" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>60% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZvotjD">HKR Womens Slip On Fashion Sneakers Summer Breathable Mesh Shoes</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$15.60</span><span class="ori_price">$38.99</span></address>
+      <textarea readonly="readonly" class="code_area">6075MEAY</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>60% off at $38.99</strong> with promo code: <strong class="m_codes">6075MEAY</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 29, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZvotjD">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="30" data-price="13.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZBXdnv"><img src="https://m.media-amazon.com/images/I/716o1tHBx8L._SR400,400_.jpg" alt="Universal Travel Adapter" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>30% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZBXdnv">Universal Travel Adapter, 2400W International High Power Adapter with 1 Smart Type-C & 3 USB Ports,KeShi Worldwide All in One Power...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$13.99</span><span class="ori_price">$19.99</span>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">30HARQYH</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>30% off at $19.99</strong> with promo code: <strong class="m_codes">30HARQYH</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 06, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZBXdnv">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="45" data-price="16.49">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NGXYp0"><img src="https://m.media-amazon.com/images/I/61ICPYFQ7BL._SR400,400_.jpg" alt="Luxsego Ionic Shower Head" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>45% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NGXYp0">Luxsego Ionic Shower Head with Replacement Hose and Holder, High Pressure & Water Saving Showerhead for Best Shower Experience,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$16.49</span><span class="ori_price">$29.98</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">4588KG8A</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>45% off at $29.98</strong> with promo code: <strong class="m_codes">4588KG8A</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NGXYp0">Use Code at Amazon</a></div>
+</div>
+ 
+<div class="card clearfix" data-score="50" data-price="14.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2ZDgoJP"><img src="https://m.media-amazon.com/images/I/51nqEpr4csL._SR400,400_.jpg" alt="[New Version] Smart Plug" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2ZDgoJP">[New Version] Smart Plug, LeFun WiFi Outlet Grouping Control (4-Pack) Compatible with Alexa Google Assistant and IFTTT,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$14.99</span><span class="ori_price">$29.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <textarea readonly="readonly" class="code_area">50IZKKJF</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $29.99</strong> with promo code: <strong class="m_codes">50IZKKJF</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 08, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2ZDgoJP">Use Code at Amazon</a></div>
+</div>
+ 
+ <div class="card clearfix" data-score="20" data-price="29.59">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2L2FaPl"><img src="https://m.media-amazon.com/images/I/61nf3oHQK0L._SR400,400_.jpg" alt="Diaper Bag Backpack Travel" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>20% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2L2FaPl">Diaper Bag Backpack Travel Maternity Baby Nappy Bags with Changing Pad, Insulated Pockets, USB Port, Stroller Straps...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$29.59</span><span class="ori_price">$36.99</span>
+        <div class="tooltip_common tooltip_red"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+        <div class="tooltip_common tooltip_green"><span>Extra Discount</span><div class="content_common tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      </address>
+      <div class="m_tooltip_common m_tooltip_red"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount by applying promotional code to the product that is being discounting.</p></div></div>
+      <div class="m_tooltip_common m_tooltip_green"><span>Extra Discount</span><div class="m_content_common m_tooltip-content"><p>Get extra discount with coupon</p></div></div>
+      <textarea readonly="readonly" class="code_area">20JAESR1</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>20% off at $36.99</strong> with promo code: <strong class="m_codes">20JAESR1</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 31, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2L2FaPl">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="50" data-price="24.99">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2LedGVT"><img src="https://m.media-amazon.com/images/I/41qrwau0DZL._SR400,400_.jpg" alt="TaoTronics Ultrasonic Humidifiers" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>50% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2LedGVT">TaoTronics Ultrasonic Humidifiers for Babies, Quiet Cool Mist Humidifier for Bedroom, 12-50 Hours, Nano-coating, Easy to Clean,...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$24.99</span><span class="ori_price">$49.98</span></address>
+      <textarea readonly="readonly" class="code_area">50B6S9HR</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>50% off at $49.98</strong> with promo code: <strong class="m_codes">50B6S9HR</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 29, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2LedGVT">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="75" data-price="10.00">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2HzRJzk"><img src="https://m.media-amazon.com/images/I/71Hh7CypOAL._SR400,400_.jpg" alt="O'Bella Hair Straighteners Dual Voltage, " /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>75% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2HzRJzk">O'Bella Hair Straighteners Dual Voltage, with Digital LCD Display, 30's heat up to 230℉, Heat resistant gloves </a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.00</span><span class="ori_price">$39.99</span></address>
+      <textarea readonly="readonly" class="code_area">75IKTEWW</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>75% off at $39.99</strong> with promo code: <strong class="m_codes">75IKTEWW</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 08, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2HzRJzk">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="80" data-price="7.40">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2MRzbiD"><img src="https://m.media-amazon.com/images/I/61wamwN6CdL._SR400,400_.jpg" alt="HOPEMATE Retinol Cream" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>80% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2MRzbiD">HOPEMATE Retinol Cream, Anti-Aging Moisturizer Cream 2.5% for Face and Eye Care, Anti-Wrinkle Essence with Hyaluronic Acid, Vitamin...</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$7.40</span><span class="ori_price">$36.99</span></address>
+      <textarea readonly="readonly" class="code_area">80YAXT5Q</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>80% off at $36.99</strong> with promo code: <strong class="m_codes">80YAXT5Q</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Aug 29, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2MRzbiD">Use Code at Amazon</a></div>
+</div>
+
+<div class="card clearfix" data-score="65" data-price="10.50">
+  <div class="image_box">
+    <a target="_blank" href="https://amzn.to/2NF1xw3"><img src="https://m.media-amazon.com/images/I/51X+RRbUiNL._SR400,400_.jpg" alt="ThusFar Men's Casual Cotton Cargo Shorts" /></a>
+  </div>
+  <div class="inner inner_top">
+    <span class="regular"><em>65% OFF</em> + free shipping</span>
+    <span class="shipping_condition">Free Shipping: <a target="_blank" href="/blogs/blog_01_amz_prime">Prime</a> or $25+ of all other eligible items.</a></span>
+    <p><a target="_blank" href="https://amzn.to/2NF1xw3">ThusFar Men's Casual Cotton Cargo Shorts Lightweight Summer Short Pants with Pockets</a></p>
+    <div class="code_high">
+      <address><span class="dis_price">$10.50</span><span class="ori_price">$29.99</span></address>
+      <textarea readonly="readonly" class="code_area">65BDDBLZ</textarea><button class="copycode">Copy</button>
+      <p class="mobile_code"><span>Take <strong>65% off at $29.99</strong> with promo code: <strong class="m_codes">65BDDBLZ</strong></span></p><span class="ex_date ex_date_new">Expiration Date : Sep 01, 2019 at 11:59 PM PDT</span><em>*Pricing may change and Amazon promotional codes can expire fast.</em>
+    </div>
+  </div> 
+  <div class="deal_btn promo_btn"><a target="_blank" href="https://amzn.to/2NF1xw3">Use Code at Amazon</a></div>
+</div>
+ 
 <div class="card clearfix" data-score="40" data-price="17.99">
   <div class="image_box">
     <a target="_blank" href="https://amzn.to/2L1hgUg"><img src="https://images-na.ssl-images-amazon.com/images/I/616Co%2BQIWBL._SX522_.jpg" alt="Travel Laptop Backpack" /></a>
