--- a/app/views/deals/_navbar_most_index_m.html.erb
+++ b/app/views/deals/_navbar_most_index_m.html.erb
@@ -10,9 +10,8 @@
         <li><button class="filter-button btn btn-md white-text rev_index" data-filter="tech">Tech & Electronics</button></li>
         <li><button class="filter-button btn btn-md rev_index" data-filter="home">Home & Kitchen</button></li>
         <li><button class="filter-button btn btn-md rev_index" data-filter="outdoor">Outdoor & Sports</button></li>
-        <li><button class="filter-button btn btn-md rev_index" data-filter="outdoor">Beauty & Fashion</button></li>
-        <li><button class="filter-button btn btn-md rev_index" data-filter="others">Others</button></li>
-       </div>
+        <li><button class="filter-button btn btn-md rev_index" data-filter="beauty">Beauty & Fashion</button></li>
+        <li><button class="filter-button btn btn-md rev_index others" data-filter="others">Others</button></li>
       </ul>
     </nav>
     
