--- a/app/assets/stylesheets/blog.css.erb
+++ b/app/assets/stylesheets/blog.css.erb
@@ -1,3 +1,8 @@
+.special_deals_box{margin-top:100px;}
+.special_deals_box h2{margin-bottom:40px;}
+.special_deals_box .editors_pick .editors_box .special_inner p{margin-bottom:10px;}
+.special_deals_box .editors_pick .special_box{height:auto;margin:1%;}
+
 /* Begin Blog Main */
 .blog{font-family: 'Montserrat', sans-serif;}
 .blog .blog_box{margin:20px 0 50px 0;}
@@ -123,7 +128,6 @@
 /* End Blog Detail */
 
 
-
 /*blog_03*/
 .blog_body{}
 .blogs .blog_body .blog_tit h2{text-align:center;}
@@ -156,8 +160,14 @@
   .blog_body .school_box .right_side{float:left;width:65%;margin-left:3%;}
 }
 
-/* blog_promocodes */
-.blog_promocode{}
-.blog_promocode ul{}
-.blog_promocode ul li{}
+.labor_wrap h1{font-size:45px;}
+.labordeals{}
+.labordeals ul{}
+.labordeals ul .labor_box{margin-bottom:100px;}
+.labordeals ul h2{margin:30px 0 10px 0;} 
+.labordeals ul li{border-bottom:1px solid #ccc;padding-bottom:7px;margin-bottom:15px;}
+.labordeals ul li a{text-decoration:none;color:#000;}
+.labordeals ul li a span{margin-right:10px;margin-bottom:5px;display:block;font-size:20px;font-weight:bold;color:#ff4d4d;}
+
+
 
